# Projeto-FastAPI

fast_zero/: .coverage  README.md  pyproject.toml
fast_zero/fast_zero/: app.py
fast_zero/tests/: test_app.py
